src/test/ui/generic-associated-types/bugs/issue-87735.stderr
error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-87735.rs:25:13
   |
LL | impl<'b, T, U> AsRef2 for Foo<T>
   |             ^ unconstrained type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
